isolate the logic in hd table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,7 @@ Here we begin
 </div>
 
 <hd-table
-
-(deletedElemrnt)="onDelete($event)"
-(createdElemrnt)="onCreate($event)"
-(updatedElemrnt)="onUpdate($event)"
-
-
-> </hd-table>
+(deletedElement)="onDelete($event)"
+(createdElement)="onCreate($event)"
+(updatedElement)="onUpdate($event)"> </hd-table>
 
