adding project to npm

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 
 
-<div>
-Here we begin
-</div>
+<!-- <div>
+<hd-rubber-table></hd-rubber-table>
+</div> -->
 
-<hd-table
+<hd-rubber-table
 (deletedElement)="onDelete($event)"
 (createdElement)="onCreate($event)"
-(updatedElement)="onUpdate($event)"> </hd-table>
+(updatedElement)="onUpdate($event)"> </hd-rubber-table>
 
